--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,8 @@
     "import jax.numpy as jnp\n",
     "from jax import jit, value_and_grad\n",
     "from utilfuncs  import computeFilter, implicit_Ke, implicit_Ae, stiffindex4AK,unknow_degree\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation as animation"
    ]
   },
   {
@@ -132,22 +133,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# nely = 20; nelx = 20;\n",
-    "# node_upper = np.arange(1,(nely+1)*nelx+1+1,nely+1);\n",
-    "# dof_upper = np.concatenate((node_upper*2-1,node_upper*2),axis=0)-1;\n",
-    "# dof_upper_uy = node_upper *2-1;\n",
-    "# defo_index = dof_upper_uy;\n",
-    "# aaa = unknow_degree(nelx,nely,defo_index)\n",
-    "# aaa.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from MMA import mmasub,subsolv\n",
     "m = 1 \n",
     "n = nelx* nely; \n",
@@ -172,23 +157,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# %%  OPTIMIZATION\n",
     "change = 1; loop = 0;\n",
-    "while (change>0.0000000001) and (loop<20):\n",
+    "iter_obj = [];\n",
+    "fig = plt.figure() # initilize figure\n",
+    "# ims = []\n",
+    "while (change>0.0000000001) and (loop<80):\n",
     "    loop = loop+1;\n",
     "\n",
     "    # OBJECTIVE FUNCTION AND SENSITIVITY ANALYSIS\n",
     "    x = jnp.array(x).reshape(-1,1,order='F');\n",
     "    obj,u =opti.objective(x);\n",
     "    jacobian_fn = jax.jacobian(opti.objective, argnums=0);\n",
+    "    iter_obj = np.append(iter_obj,obj);\n",
     "    dobj_dx = jacobian_fn(x)[0];\n",
     "    \n",
     "    # FILTERING OF SENSITIVITIES\n",
@@ -215,15 +197,33 @@
     "    # PLOT, clear the plot and plot the new one\n",
     "    %matplotlib qt\n",
     "    plt.clf()\n",
-    "    plt.plot(value_upper_ux+np.arange(0,nelx+1),value_upper_uy,'o-')\n",
-    "    plt.plot( u[dof_upper_ux].reshape(-1)+np.arange(0,nelx+1),u[dof_upper_uy].reshape(-1),'k-o',linewidth=1,markersize=6)\n",
-    "    # set y axis\n",
-    "    # plt.ylim(0,0.012)\n",
-    "    # plt.xlim(0,nelx+1)\n",
+    "    plt.clf()\n",
+    "    plt.plot(value_upper_ux+np.arange(0,nelx+1),value_upper_uy,'o-b' \\\n",
+    "    , u[dof_upper_ux].reshape(-1)+np.arange(0,nelx+1),u[dof_upper_uy].reshape(-1),'k-o',linewidth=1,markersize=6)\n",
     "    plt.ylabel('Uy')\n",
     "    plt.xlabel('Ux')\n",
     "    plt.legend(['target','optimized'])\n",
-    "    plt.pause(0.01)"
+    "    plt.title('loop = '+str(loop)+' obj = '+str(obj));\n",
+    "    plt.pause(0.01)\n",
+    "    # ims.append([plt.plot(value_upper_ux+np.arange(0,nelx+1),value_upper_uy,'o-b' \\\n",
+    "    # , u[dof_upper_ux].reshape(-1)+np.arange(0,nelx+1),u[dof_upper_uy].reshape(-1),'k-o',linewidth=1,markersize=6)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %% PLOT\n",
+    "# display the deformation field x = value_upper_ux,y = value_upper_uy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "%matplotlib qt\n",
+    "plt.figure()\n",
+    "plt.imshow(x.reshape(nely,nelx),cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -235,18 +235,19 @@
     "# %% PLOT\n",
     "# display the deformation field x = value_upper_ux,y = value_upper_uy\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "%matplotlib qt\n",
     "plt.figure()\n",
-    "plt.imshow(x.reshape(nely,nelx),cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.plot(iter_obj)\n",
+    "plt.xlabel('iteration')\n",
+    "plt.ylabel('objective')\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -265,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
